Added multiple AFK bots

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "minecraft-afk-botss",
+  "name": "minecraft-afk-bots",
   "version": "1.0.0",
   "description": "Multiple AFK bots for Aternos servers",
   "main": "bot1.js",
